--- a/index.html
+++ b/index.html
@@ -92,16 +92,18 @@
     </div>
 
     <!-- Technical Skills Section -->
-    <div class="container mt-5" id="skills">
-        <h2 class="section-title">Technical Skills</h2>
-        <ul>
-            <li>Web Development: HTML, CSS, JavaScript, Bootstrap</li>
-            <li>Programming Languages: C#</li>
-            <li>Database Management: Microsoft SQL Server (MSSQL)</li>
-            <li>Design Tools: Canva, Microsoft Word</li>
-            <li>Development & Collaboration Tools: GitHub, Visual Studio, Visual Studio Code</li>
-        </ul>
-    </div>
+   <div class="container mt-5" id="skills">
+    <h2 class="section-title">Technical Skills</h2>
+    <ul>
+        <li>Web Development: HTML, CSS, JavaScript, Bootstrap </li>
+        <li>Programming Languages: C#</li>
+        <li>Database Management: Microsoft SQL Server (MSSQL), MySQL</li>
+        <li>Design Tools: Canva, Microsoft Word</li>
+        <li>Frameworks/Libraries: jQuery , Tailwind CSS </li>
+        <li>Development & Collaboration Tools: GitHub, Visual Studio, Visual Studio Code</li>
+    </ul>
+</div>
+
 
     <!-- Soft Skills Section -->
     <div class="container mt-5">
