--- a/index.html
+++ b/index.html
@@ -12,20 +12,33 @@
             background-color: #f8f9fa;
         }
         .hero {
-            background-color: #007bff;
+            background: url('https://via.placeholder.com/1920x600.png?text=Ocean+Background') no-repeat center center;
+            background-size: cover;
             color: white;
-            padding: 50px 0;
-            text-align: center;
+            padding: 50px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
         }
-        .hero h1 {
-            margin-bottom: 20px;
+        .hero-content {
+            display: flex;
+            align-items: center;
+            text-align: left;
+            background: rgba(0, 0, 0, 0.6);
+            padding: 20px;
+            border-radius: 10px;
+            color: white;
         }
         .hero img {
             border-radius: 50%;
             width: 150px;
             height: 150px;
             object-fit: cover;
-            margin-bottom: 20px;
+            margin-right: 20px;
+        }
+        .hero-details h1 {
+            margin-bottom: 10px;
         }
         .section-title {
             margin-top: 40px;
@@ -36,9 +49,6 @@
         .section-title:hover {
             color: #007bff;
             transform: scale(1.1);
-        }
-        .contact-info {
-            margin-bottom: 20px;
         }
         footer {
             background-color: #343a40;
@@ -80,9 +90,13 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <img src="/123.jpg" alt="Shubham Pandey">
-        <h1>Shubham Pandey</h1>
-        <p>Frontend Developer | MCA Graduate</p>
+        <div class="hero-content">
+            <img src="/123.jpg" alt="Shubham Pandey">
+            <div class="hero-details">
+                <h1>Shubham Pandey</h1>
+                <p>Frontend Developer | MCA Graduate</p>
+            </div>
+        </div>
     </div>
 
     <!-- About Section -->
@@ -91,6 +105,35 @@
         <p>I am a Frontend Developer with an MCA Degree from Dr. Ram Manohar Lohia Avadh University, Ayodhya. Skilled in HTML, CSS, JavaScript, and SQL, I specialize in creating responsive, user-friendly, and visually appealing interfaces. I’m passionate about transforming ideas into functional designs and continuously learning new tools to deliver impactful solutions.</p>
     </div>
 
+    <!-- Additional Sections Remain Same -->
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Shubham Pandey. All Rights Reserved.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+
+
+    <!-- Hero Section -->
+    <div class="hero">
+        <div class="hero-content">
+            <img src="/123.jpg" alt="Shubham Pandey">
+            <div class="hero-details">
+                <h1>Shubham Pandey</h1>
+                <p>Frontend Developer | MCA Graduate</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- About Section -->
+    <div class="container mt-5" id="about">
+        <h2 class="section-title">About Me</h2>
+        <p>I am a Frontend Developer with an MCA Degree from Dr. Ram Manohar Lohia Avadh University, Ayodhya. Skilled in HTML, CSS, JavaScript, and SQL, I specialize in creating responsive, user-friendly, and visually appealing interfaces. I’m passionate about transforming ideas into functional designs and continuously learning new tools to deliver impactful solutions.</p>
+    </div>
+    
     <!-- Technical Skills Section -->
    <div class="container mt-5" id="skills">
     <h2 class="section-title">Technical Skills</h2>
@@ -165,11 +208,10 @@
         </ul>
     </div>
 
-    <!-- Footer -->
-    <footer>
+   <footer>
         <p>&copy; 2025 Shubham Pandey. All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+</html>>
